applications/bare/microk8s-cloudkoffer/weather-service-vue3/vue3ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vue-frontend
  namespace: weather-golang
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # traefik.frontend.passHostHeader: "true"
    # traefik.backend.loadbalancer.sticky: "true"
spec:
  rules:
    - host: weather.cloudkoffer
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vue-frontend
                port:
                  name: http
